bin/tests/snapshots/bool_comparison__fix_eb450df0fb6d76e9df94f175a6b87a7c1a667495e18432ed8f38540fd051cec1.snap
---
source: bin/tests/bool_comparison.rs
expression: "\"true == false\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-true == false
+false
