bin/tests/snapshots/bool_comparison__lint_43a857afe823ef70b47d4e0fbf00af8951e09a9a9891d29b3ba9e762a2978adb.snap
---
source: bin/tests/bool_comparison.rs
expression: "\"true == d\""
---
[W01] Warning: Unnecessary comparison with boolean
   ╭─[<temp_file_path>:1:1]
   │
 1 │ true == d
   · ────┬────  
   ·     ╰────── Comparing d with boolean literal true
───╯
