bin/tests/snapshots/bool_comparison__lint_90387764e7c02df897cd8374ca670cd2faff59d2cebb3f416ba1e649f46efcac.snap
---
source: bin/tests/bool_comparison.rs
expression: "\"let foo = {}; in (foo.bar or false) == true\""
---

