bin/tests/snapshots/bool_comparison__lint_9f48ebd94e1733d7ccda130d62830499b7344b794644163af528b0c834c5cca4.snap
---
source: bin/tests/bool_comparison.rs
expression: "\"true == c\""
---
[W01] Warning: Unnecessary comparison with boolean
   ╭─[<temp_file_path>:1:1]
   │
 1 │ true == c
   · ────┬────  
   ·     ╰────── Comparing c with boolean literal true
───╯
