bin/tests/snapshots/bool_comparison__lint_a11a365119d2c64750d4253426c99db3e016d21e6183a706845dfed17d803393.snap
---
source: bin/tests/bool_comparison.rs
expression: "\"b == true\""
---
[W01] Warning: Unnecessary comparison with boolean
   ╭─[<temp_file_path>:1:1]
   │
 1 │ b == true
   · ────┬────  
   ·     ╰────── Comparing b with boolean literal true
───╯
