bin/tests/snapshots/bool_comparison__lint_a14c6695accf2da707eaeb76ded232840736b9034ef1b55d1c8c92b9f5098a14.snap
---
source: bin/tests/bool_comparison.rs
expression: "\"false == m ? n\""
---
[W01] Warning: Unnecessary comparison with boolean
   ╭─[<temp_file_path>:1:1]
   │
 1 │ false == m ? n
   · ───────┬──────  
   ·        ╰──────── Comparing m ? n with boolean literal false
───╯
